# boxed-cpp

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  boxed-cpp-config.cmake.in  test-boxed-cpp.cpp  test-main.cpp
.github/workflows/: build.yml
cmake/: ThirdParties.cmake
include/boxed-cpp/: boxed.hpp
